--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -152,6 +152,10 @@ button:hover { background-color: rgb(155, 103, 223); }
     text-align: right;
 }
 
+.iconStyle:hover {
+    color: rgb(155, 103, 223);
+}
+
 .container {
     display: grid;
     padding-left: 20px;
@@ -167,4 +171,10 @@ h3{
     text-align: center;
     font-size: large;
     color: rgb(103, 15, 219);
+}
+
+img:hover{
+    width: 37px;
+    height: 37px;
+    overflow: hidden;
 }
