avance en testing de componentes y mejoras varias

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -178,3 +178,12 @@ img:hover{
     height: 37px;
     overflow: hidden;
 }
+
+.idConditionalTd{
+    border: none;
+    border-color: white;
+}
+
+.idConditionalTd > p {
+    color: #888;
+}
