corrigiendo pruebas de TablePokemons, anadiendo funcionalidad de reverse, mejorando estilos

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -213,3 +213,11 @@ img:hover{
 .idConditionalTd > p {
     color: #888;
 }
+
+.orderRevert {
+    float: right;
+}
+
+.orderRevert:hover{
+    color: #888;
+}
